add error handling for funtranslationsapi client add tests cleanup and refactoring